--- a/package.json
+++ b/package.json
@@ -30,82 +30,93 @@
     "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\""
   },
   "dependencies": {
-    "@akveo/ng2-completer": "^9.0.1",
-    "@angular/animations": "^12.1.0",
+    "@angular/animations": "12.1.0",
     "@angular/cdk": "12.1.0",
-    "@angular/common": "^12.1.0",
-    "@angular/compiler": "^12.1.0",
-    "@angular/core": "^12.1.0",
-    "@angular/forms": "^12.1.0",
-    "@angular/google-maps": "^12.1.0",
-    "@angular/material": "^12.1.0",
-    "@angular/platform-browser": "^12.1.0",
-    "@angular/platform-browser-dynamic": "^12.1.0",
-    "@angular/router": "^12.1.0",
+    "@angular/common": "12.1.0",
+    "@angular/compiler": "12.1.0",
+    "@angular/core": "12.1.0",
+    "@angular/forms": "12.1.0",
+    "@angular/google-maps": "12.1.0",
+    "@angular/material": "12.1.0",
+    "@angular/platform-browser": "12.1.0",
+    "@angular/platform-browser-dynamic": "12.1.0",
+    "@angular/router": "12.1.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@ckeditor/ckeditor5-angular": "^2.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^31.1.0",
+    "@ckeditor/ckeditor5-build-inline": "^31.1.0",
     "@nebular/auth": "8.0.0",
     "@nebular/eva-icons": "8.0.0",
     "@nebular/security": "8.0.0",
     "@nebular/theme": "8.0.0",
-    "@swimlane/ngx-charts": "^14.0.0",
-    "angular2-chartjs": "0.4.1",
+    "@swimlane/ngx-charts": "^20.0.1",
+    "@tinymce/tinymce-angular": "^4.2.4",
+    "angular-2-local-storage": "^3.0.2",
     "bootstrap": "4.3.1",
-    "chart.js": "2.7.1",
-    "ckeditor": "4.7.3",
+    "chart.js": "^3.7.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
-    "echarts": "^4.0.2",
+    "echarts": "^5.3.0",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
-    "ng2-ckeditor": "^1.2.9",
-    "ng2-smart-table": "^1.6.0",
-    "ngx-echarts": "^4.2.2",
+    "ng2-charts": "^3.0.8",
+    "ng2-completer": "^9.0.1",
+    "ng2-smart-table": "^1.7.2",
+    "ngx-charts": "^3.0.2",
+    "ngx-echarts": "^7.1.0",
+    "ngx-trim-directive": "^1.1.0",
     "normalize.css": "6.0.0",
+    "opensans-webkit": "^1.1.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
     "style-loader": "^1.1.3",
-    "tinymce": "4.5.7",
+    "text-encoding": "^0.7.0",
+    "tinymce": "^4.9.11",
     "tslib": "^2.1.0",
     "typeface-exo": "0.0.22",
+    "underscore": "^1.13.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "~12.1.0",
     "@angular-devkit/build-angular": "~12.1.0",
-    "@angular/cli": "^12.1.0",
-    "@angular/compiler-cli": "^12.1.0",
+    "@angular/cli": "12.1.0",
+    "@angular/compiler-cli": "12.1.0",
     "@angular/language-service": "12.1.0",
-    "@compodoc/compodoc": "1.0.1",
+    "@ckeditor/ckeditor5-select-all": "^31.1.0",
+    "@compodoc/compodoc": "^1.1.18",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/d3-color": "1.0.5",
-    "@types/jasmine": "^3.3.0",
-    "@types/jasminewd2": "2.0.3",
+    "@types/jasmine": "~3.10.0",
+    "@types/jasminewd2": "~2.0.10",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "conventional-changelog-cli": "1.3.4",
-    "husky": "0.13.3",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "conventional-changelog-cli": "~2.2.2",
+    "husky": "7.0.4",
+    "jasmine-core": "~3.10.0",
+    "jasmine-marbles": "~0.8.3",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-sonarqube-unit-reporter": "~0.0.23",
     "npm-run-all": "4.0.2",
     "protractor": "~7.0.0",
     "rimraf": "2.6.1",
-    "stylelint": "7.13.0",
-    "ts-node": "3.2.2",
+    "stylelint": "^13.7.0",
+    "ts-node": "10.4.0",
     "tslint": "~6.1.0",
-    "tslint-language-service": "^0.9.9",
-    "typescript": "^4.2.3"
+    "typescript": "~4.3.0",
+    "typescript-tslint-plugin": "^1.0.1"
   }
 }
